# enterprise_gateway

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile.dev  ELYRA.md  LICENSE  LICENSE.md  MANIFEST  MANIFEST.in  Makefile  README.md  conftest.py  index.html  kubernetes.md  platform-kubernetes.html  platform-spark.html  privacy-policy.html  pyproject.toml  readthedocs.yml  release.sh  requirements-conda.txt  requirements-test.txt  requirements.txt  requirements.yml  setup.cfg  setup.py  setup_pypi.py  update-demo-base.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml
css/: main.css
docker-stacks/all-spark-notebook/: Dockerfile  README.md
docs/: Makefile  conda_env.yml  doc-requirements.txt  environment.yml  getting-started-copy.md  make.bat  requirements.txt
docs/_static/: numpy_friendly.css
docs/source/: changelog.md  conf.py  config-options.md  contrib.md  debug.md  detailed-overview.md  devinstall.md  docker.md  features.md  getting-started-advanced-features.md  getting-started-client-mode.md  getting-started-cluster-mode.md  getting-started-conductor.md  getting-started-docker.md  getting-started-kernels.md  getting-started-kubernetes.md  getting-started-other-features.md  getting-started-security.md  getting-started.md  http-mode.md  index.rst  kern-conductor.md  kern-docker.md  kern-kubernetes.md  kern-yarn-client-mode.md  kern-yarn-cluster-mode.md  kernel-conductor.md  kernel-distributed.md  kernel-docker.md  kernel-kubernetes.md  kernel-library.md  kernel-local.md  kernel-spark-standalone.md  kernel-vanilla.md  kernel-yarn-client-mode.md  kernel-yarn-cluster-mode.md  operating.md  plug-in.md  roadmap.md  summary-changes.md  (+5 more)
docs/source/_static/: custom.css
docs/source/contributors/: contrib.md  debug.md  devinstall.md  docker.md  index.rst  roadmap.md  sequence-diagrams.md  system-architecture.md
docs/source/developers/: custom-images.md  dev-process-proxy.md  index.rst  kernel-launcher.md  kernel-library.md  kernel-manager.md  kernel-specification.md  rest-api.rst
docs/source/operators/: config-add-env.md  config-availability.md  config-cli.md  config-culling.md  config-dynamic.md  config-env-debug.md  config-file.md  config-kernel-override.md  config-kernel-persistence.md  config-options.md  config-security.md  config-sys-env.md  deploy-conductor.md  deploy-distributed.md  deploy-docker.md  deploy-kubernetes.md  deploy-single.md  deploy-yarn-cluster.md  getting-started.md  index.rst  installing-eg.md  installing-kernels.md  kernel-conductor.md  kernel-distributed.md  kernel-docker.md  kernel-kubernetes.md  kernel-yarn-client-mode.md  kernel-yarn-cluster-mode.md  launching-eg.md  use-cases.md
docs/source/other/: index.rst  related-resources.md  troubleshooting.md
docs/source/users/: client-config.md  connecting-to-eg.md  index.rst  installation.md  kernel-envs.md
docs/tex/gateway_kernel_init_sequence_diagram/: Makefile  gateway_kernel_init_sequence_diagram.tex
elyra/: __init__.py  __main__.py  _version.py  elyraapp.py
elyra/services/kernels/: processproxy.py  remotemanager.py
elyra/services/kernelspecs/: remotekernelspec.py
elyra/services/processproxies/: distributed.py  processproxy.py  yarn.py
elyra/services/sessions/: kernelsessionmanager.py
elyra/tests/: test_gatewayapp.py
elyra/tests/resources/: failing_code3.ipynb  kernel_api3.ipynb  unknown_kernel.ipynb
enterprise_gateway/: __init__.py  __main__.py  _version.py  enterprisegatewayapp.py  metrics.py  mixins.py  webapp.py
enterprise_gateway/base/: handlers.py
enterprise_gateway/client/: gateway_client.py
enterprise_gateway/itests/: __init__.py  kernel_client.py  test_authorization.py  test_base.py  test_python_kernel.py  test_r_kernel.py  test_scala_kernel.py
enterprise_gateway/itests/notebooks/: Python_Client1.ipynb  Python_Cluster1.ipynb  R_Client1.ipynb  R_Cluster1.ipynb  Scala_Client1.ipynb  Scala_Cluster1.ipynb
enterprise_gateway/itests/src/: R_client_testcase.py  R_cluster_testcase.py  (+9 more)
enterprise_gateway/tests/: __init__.py  test_enterprise_gateway.py  test_gatewayapp.py  test_handlers.py  test_jupyter_websocket.py  test_kernelspec_cache.py  test_mixins.py  test_notebook_http.py  test_process_proxy.py  test_shell_injection.py  test_yaml_injection.py
etc/: Makefile
etc/api_examples/: api_intro.ipynb  endpoint_ordering.ipynb  scotch_api.ipynb  setting_response_metadata.ipynb
etc/docker/: docker-compose.yml  enterprise-gateway-docker.sh  enterprise-gateway-swarm.sh  haproxy.cfg
etc/kubernetes/: enterprise-gateway-acl.yaml  enterprise-gateway.yaml
etc/node_client_example/: client.js  package.json
etc/python_client_example/: client.py
infra/: Dockerfile  entrypoint.sh  jeg_config.py
jeg/: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  codecov.yml
jeg/.github/: dependabot.yml
jeg/docs/: doc-requirements.txt
jeg/enterprise_gateway/: __init__.py  __main__.py  enterprisegatewayapp.py  mixins.py
jeg/website/: privacy-policy.md
kernel_gateway/: __init__.py  __main__.py  _version.py  gatewayapp.py  mixins.py
kernel_gateway/base/: handlers.py
kernel_gateway/jupyter_websocket/: __init__.py  handlers.py  swagger.json  swagger.yaml
kernel_gateway/notebook_http/: __init__.py  errors.py  handlers.py  request_utils.py
kernel_gateway/tests/: base.py  test_gatewayapp.py  test_jupyter_websocket.py  test_mixins.py  test_notebook_http.py
scripts/: jupyter-elyra  jupyter-enterprisegateway  jupyter-kernel-gateway  run_kernel.sh  run_multiple_kernels.sh
website/: _config.yml  index.md  platform-kubernetes.md  platform-spark.md  privacy-policy.md  publish.sh
website/_data/: navigation.yml
website/_includes/: call-to-action.html  contact.html  head.html  header.html  nav.html  platforms.html  scripts.html
website/_layouts/: home.html  page.html
website/_sass/: _base.scss
website/css/: animate.min.css
website/js/: wow.min.js
(+363 files in other folders)
