[bdist_wheel]
#universal=1

[metadata]
description-file=README.md
license_file = LICENSE.md

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
exclude = __init__.py
ignore =
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks after binary operators
    W504
max-line-length = 120
