[bdist_wheel]
#universal=1

[metadata]
description-file=README.md
license_file = LICENSE.md

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
exclude = __init__.py
ignore =
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks after binary operators
    W504,
    # Use TODO(NAME)
    H101,
    # assertEquals is deprecated, use assertEqual
    H234,
    # assert_ is deprecated, use assertTrue
    H235,
    # one import per line
    H301,
    # imports not in alphabetical order (os, .test_base.testbase)
    H306,
    # docstring should not start with a space
    H401,
    # multi line docstrings should end on a new line
    H403,
    # multi line docstring should start without a leading new line
    H404,
    # multi line docstring summary not separated with an empty line
    H405,
max-line-length = 120
