[bdist_wheel]
#universal=1

[metadata]
description-file=README.md
license_file = LICENSE.md

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
exclude = __init__.py
ignore =
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # Allow breaks after binary operators
    W504,
    # Include name with TODOs as in # TODO(yourname)
    H101,
    # Do not import more than one module per line
    H301,
    # Alphabetically order imports by the full module path
    H306,
    # Multi line docstrings should start without a leading new line
    H404,
    # Multi line docstrings should start with a one line summary followed by an empty line
    H405
max-line-length = 120
